tcw3/designer/tests/bad/use_self.tcwdl
// `self` is a virtual module tha cannot be imported by itself
use self as Hoge;

pub comp crate::Comp1 {
    prop field: Hoge;
}
